# busan_solution_in_buva

./: .gitignore  README.md  main.py  pyproject.toml
ML/ml01/: ML00_Dictionary.py  ML01_quiz.py  ML01_titanic.py  ML02_01_scaler.py  ML02_04_Califonia.py  ML02_05_Quiz.py  ML02_06_califonia.py  ML02_07_Terms.py  ML03_01_Terms.py  ML03_02_Fish_LogisticRegression.py  ML03_03_ConfusionMatrix_titanic.py  ML03_04_BrestCancer.py  ML03_05_jupyter.py  ML03_06_Quiz.py  README.md  app.py  ml.ipynb  pyproject.toml  text.txt
ML/ml01/ML00/: ML00_Dictionary copy.py  ML00_Dictionary.py
ML/ml01/ML01/: ML01_Supervise_learning.py  ML01_quiz.py
ML/ml01/ML02/: ML02_02_knnRegression.py  ML02_03_Polynomial Regression.py  ML02_06_califonia.py
ML/ml01/ML04/: ML04_01_terms.py  ML04_02_jupyter.py  ML04_03_OOB.py  ML04_99_game.py  animal_cards.csv
ML/ml02/: ML02_regression.ipynb  ML03_classification.ipynb  fish.csv  ml02-california_housing.html  ml02-california_housing.ipynb  ml03-breast_cancer.html  ml03-breast_cancer.ipynb  ml04_dicision_tree.ipynb  ml04ex-wine.ipynb
Streamlit_study/: README.md  Streamlit_applied.py  Streamlit_basic.py  Streamlit_challenge.py  app.py  main.py  pyproject.toml
Streamlit_study2/: form.py  group_navigation.py  page_entry.py  pyproject.toml  session1.py  session2.py  session3_sidebar.py  학습자료.html
Streamlit_study2/page/: dashboard.py  home.py
statistic/: study_pandas.ipynb
visualize/: EDA_practice.ipynb  main.py  plotyExpress.ipynb  pyproject.toml  study_visualize.ipynb
