[project]
name = "busan-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "streamlit>=1.57.0",
]

[tool.uv.workspace]
members = [
    "Streamlit/my-dashboard",
    "Streamlit_study",
    "Streamlit_study2",
]
